feat: Improve local dev login with secure isolation and modern UI
Mejora la experiencia de desarrollo local con logout confiable, aislamiento
de producción y un diseño moderno para la página de login.

### Cambios Principales

**1. Fix: Logout robusto**
- Refactorizado LogoutResource para usar JAX-RS NewCookie API
- Ahora limpia correctamente ambas cookies de sesión:
  * q_session (OIDC, producción)
  * quarkus-credential (Form Auth, desarrollo)
- Configuración dinámica de atributos Secure y SameSite según contexto

**2. Feature: Aislamiento de login local**
- Creado DevAuthResource con @IfBuildProfile("dev")
- Movido login.html estático a template dev-login.html
- El endpoint /login.html solo existe en builds de desarrollo
- Agregado LoginIsolationTest para verificar 404 en prod (test profile)
- Retorna 404 automáticamente en producción

**3. Feature: Login button inteligente**
- Agregado GlobalTemplateExtensions.isDev() para detectar ambiente
- Botones de login ahora redirigen dinámicamente:
  * Dev: /login.html (login local)
  * Prod: /private/profile (OIDC flow)
- Actualizado header.html y navbar.qute.html

**4. Feature: Rediseño de UI de login local**
- Creado dev-login.css con tema retro púrpura matching sitio web
- Removidos todos los estilos inline de dev-login.html
- Eliminados emojis y botón de Google (redundante en dev)
- Todo el contenido centrado con diseño glassmorphism
- Cards de credenciales con estilo retro consistente

**5. Config: Auto-redirect en dev mode**
- Configurado application.properties para redirigir a /login.html
- form.login-page y form.error-page apuntan a login local

### Archivos Nuevos
+ src/main/java/com/scanales/eventflow/dev/DevAuthResource.java
+ src/main/resources/META-INF/resources/css/dev-login.css
+ src/main/resources/templates/dev-login.html
+ src/test/java/com/scanales/eventflow/dev/LoginIsolationTest.java

### Archivos Eliminados
- src/main/resources/META-INF/resources/login.html

### Verificación
- LoginIsolationTest: Ve